# argus

./: .gitignore  AGENTS.md  AGENT_PROGRESS.md  Cargo.toml  README.md  reasonix.toml
argus-cli/: Cargo.toml
argus-cli/src/: main.rs
argus-core/: Cargo.toml
argus-core/src/: ai.rs  ai_feature.rs  bloom.rs  db.rs  diff.rs  ipc.rs  lib.rs  model.rs  scanner.rs
argus-core/src/cleaner/: audit.rs  categories.rs  cleaner.rs  mod.rs  purge.rs  safety.rs  shell_cmd.rs  uninstaller.rs
argus-tui/: Cargo.toml
argus-tui/src/: app.rs  app_tests.rs  command.rs  config.rs  delta.rs  event.rs  handler.rs  ipc_client.rs  lib.rs  main.rs  render.rs  search.rs  theme.rs  time_utils.rs  tree_ops.rs  types.rs  util.rs
argus-tui/src/components/: ai_review.rs  cleanup.rs  command_bar.rs  delta_detail.rs  file_tree.rs  filter_bar.rs  flat_tree.rs  help_popup.rs  metadata.rs  mod.rs  popup.rs  status_bar.rs  time_help.rs
argus-tui/src/handler/: ai_review.rs  browsing.rs  cleanup.rs  command.rs  delta_detail.rs  filter.rs  finder.rs  info.rs  prompt.rs  search.rs
argus-tui/tests/: integration.rs
argusd/: Cargo.toml
argusd/src/: config.rs  daemonize.rs  debounce.rs  ipc_server.rs  main.rs  retention.rs  watcher.rs
docs/: flat-mode-design.md
docs/archive/: README.md
docs/archive/plans/: sqlite-storage-backend.md
docs/archive/requirements/: 10-phase1-guide.md
docs/notes/: file-tree-search-impl-guide.md  file-tree-search-opt-plan.md  file-tree-search-perf.md  scan-memory-optimization-csr.md  tui-current-behavior.md
docs/plans/: delta-detail-popup.md  file-tree-size-design.md  file-tree-size-investigation.md  file-tree-size-model-proposal.md  performance-optimizations.md  phase3-daemon-design.md  sqlite-storage-backend-agent-checklist.md  sqlite-storage-backend.md  standalone-fs-navigation-refactor.md
docs/requirements/: 01-overview.md  02-architecture.md  03-core-features.md  04-configuration.md  05-ux-interaction.md  06-ai-design.md  07-safety.md  08-data-model.md  09-roadmap.md  10-cleaner.md  10-phase1-guide.md  11-logging.md  12-ai-ux.md  12-phase2-guide.md  index.md
ratatui-finder/: Cargo.toml  README.md
ratatui-finder/src/: fs.rs  lib.rs  matcher.rs  widgets.rs
