[package]
name = "argus-cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["cleanup"]
cleanup = ["argus-core/cleanup"]
shell-cmds = ["cleanup", "argus-core/shell-cmds"]

[dependencies]
argus-core = { path = "../argus-core" }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ctrlc = "3.4"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
bincode = "1"
colored = "3"
inquire = "0.7"
