[package]
name = "argus-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
argus-core = { path = "../argus-core" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
trash = "3"

[dev-dependencies]
tempfile = "3"
