[package]
name = "argus-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
argus-core = { path = "../argus-core" }
anyhow = "1"
arboard = "3"
chrono = "0.4"
crossterm = "0.28"
ctrlc = "3.4"
ratatui = "0.29"
ratatui-finder = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
trash = "3"
bincode = "1"

[dev-dependencies]
tempfile = "3"
