[package]
name = "argusd"
version = "0.1.0"
edition = "2021"

[dependencies]
argus-core = { path = "../argus-core" }
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
tokio = { version = "1", features = ["full"] }
notify = "7"
bincode = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
toml = "0.8"
rusqlite = "0.31"
ctrlc = "3.4"
globset = "0.4"

[dev-dependencies]
tempfile = "3"